=========================================================================
CHANGE LOG
=========================================================================

2008-03-25 Warren L. DeLano <warren@delsci.com>	

	* Eliminated a longstanding GC bug (problematic on 64bit/py251)
	
2008-03-22 Warren L. DeLano <warren@delsci.com>	

	* Fixed bugs with label sizes & positions in orthoscopic mode

2008-03-22 Warren L. DeLano <warren@delsci.com>	

	* PTR, SEP, TPO now included in alignments
	
2008-03-12 Warren L. DeLano <warren@delsci.com>	

	* cones are now working (flat-capped only...)
		
2008-03-09 Warren L. DeLano <warren@delsci.com>	

	* added Movie->Program submenus and make other changes to Movie

	* updated buttons in upper right panel -- added 'orient' button
	
	* movie_rock modified so as to defer to rock setting by default
	
	* reduced Tcl/Tk pause on startup from 1 sec to 0.1 sec
	
	* rock setting (replaces hardcoded Control->Rocking property)
	
2008-03-08 Warren L. DeLano <warren@delsci.com>	

	* added "modal" draw loop to deal with Windows GL update bugs
	
2008-03-07 Warren L. DeLano <warren@delsci.com>	

	* added cartoon_putty_transform setting for comparison tasks
		
2008-02-24  Warren L. DeLano <warren@delsci.com>	

	* select now applies validate_object_names to selection name
	
2008-02-23  Warren L. DeLano <warren@delsci.com>	

	* fixed a fitting bug with degenerate cases

	* various activex compatibility fixes integrated over past weeks
	
2008-02-05  Warren L. DeLano <warren@delsci.com>	

	* eliminated rare but serious bug with fog plus selections
	
2008-01-31  Warren L. DeLano <warren@delsci.com>	

	* grid_slot experimental setting
	
	* grid_mode 2 for viewng multiple states
	
2008-01-30  Warren L. DeLano <warren@delsci.com>	

	* grid_mode 1 for viewing multiple objects 
	
	* dash_color, angle_color, dihedral_color settings
	
	* surface_mode 3 and 4 added (thanks Nidhi!)
	
2008-01-29  Warren L. DeLano <warren@delsci.com>	
